--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "dotenv": "^16.4.7",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
+    "fast-xml-parser": "^5.2.0",
     "firebase": "^11.6.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-web": "~0.19.13",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
