--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "backend",
+  "name": "legalnews-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "testRis.js",
+  "description": "Backend for Legal News App",
+  "main": "server.js",
   "scripts": {
-    "start": "node singleKundmachung.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "fetch": "node fetchRIS.js",
+    "fetch-mietrecht": "node fetchMietrecht.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "ris",
+    "legal",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^2.7.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7",
+    "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
