--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fast-xml-parser": "^5.2.0",
     "node-fetch": "^2.6.7",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.9"
   }
 }
