--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "Backend for Legal News App",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "fetch": "node fetchRIS.js",
-    "fetch-mietrecht": "node fetchMietrecht.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,13 +17,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@genkit-ai/googleai": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fast-xml-parser": "^5.2.0",
-    "node-fetch": "^2.6.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-rate-limit": "^7.5.0",
+    "fast-xml-parser": "^4.3.2",
+    "genkit": "^1.6.0",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.0"
   }
 }
