--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "legalnews-backend",
   "version": "1.0.0",
   "description": "Backend for Legal News App",
-  "main": "server.js",
+  "main": "./src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/erver.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -23,6 +23,8 @@
     "express": "^4.18.3",
     "express-rate-limit": "^7.5.0",
     "fast-xml-parser": "^4.3.2",
+    "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "genkit": "^1.6.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
