refactor backend structure, implement notification handling, and enhance AI summarization features; added error handling middleware and updated environment configurations

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ FIREBASE_STORAGE_BUCKET="your-storage-bucket"
 FIREBASE_MESSAGING_SENDER_ID="your-messaging-sender-id"
 FIREBASE_APP_ID="your-app-id"
 FIREBASE_MEASUREMENT_ID="your-measurement-id" 
+PORT="the port of the backend, standard is 3000"
