refactor notification handling by consolidating notification fetching logic into a dedicated service, enhancing error handling, and implementing Firebase authentication middleware for protected routes; update UI components to utilize authenticated API client for improved data fetching

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 GOOGLE_GENAI_API_KEY="your_google_api_key"
 FIREBASE_FCM_VAPID_KEY="your_firebase_fcm_vapid_key"
 PORT="your_port"
+API_KEY="your_api_key"
