--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,8 +19,6 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 18.x
-        cache: 'npm'
-        cache-dependency-path: 'backend/package-lock.json'
     
     - name: Install dependencies
       working-directory: ./backend
@@ -37,34 +35,42 @@ jobs:
       run: |
         echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > serviceAccountKey.json
     
-    - name: Create direct fetch script
+    - name: Create simple fetch script
       working-directory: ./backend
       run: |
-        cat > fetch-data.js << 'EOF'
-        // Direct fetch script using Admin SDK
-        import { db } from './config/firebase-admin.js';
+        cat > fetch-laws.js << 'EOF'
         import * as notificationService from './src/service/notificationService.js';
 
-        const runFetches = async () => {
+        // Simple script to fetch legal notifications
+        async function main() {
+          console.log('==== Starting RIS notification fetch process ====');
+          
           try {
-            console.log('Fetching federal notifications...');
+            // 1. Federal notifications
+            console.log('\n[1/2] Fetching federal notifications...');
             const federalResult = await notificationService.fetchLatestNotifications();
-            console.log('Federal notifications result:', federalResult);
+            console.log(`✓ Federal fetch complete: ${JSON.stringify(federalResult)}`);
             
-            console.log('Fetching state notifications...');
+            // 2. State notifications
+            console.log('\n[2/2] Fetching state notifications...');
             const stateResult = await notificationService.fetchStateNotifications();
-            console.log('State notifications result:', stateResult);
+            console.log(`✓ State fetch complete: ${JSON.stringify(stateResult)}`);
             
-            console.log('All notifications fetched successfully');
+            console.log('\n==== All notifications successfully fetched and stored ====');
           } catch (error) {
-            console.error('Error fetching notifications:', error);
+            console.error(`\n❌ ERROR: ${error.message}`);
+            console.error(error.stack);
             process.exit(1);
           }
-        };
+        }
 
-        runFetches();
+        // Run and handle errors
+        main().catch(err => {
+          console.error(`\n❌ FATAL ERROR: ${err.message}`);
+          process.exit(1);
+        });
         EOF
     
-    - name: Run data fetch
+    - name: Run fetch script
       working-directory: ./backend
-      run: node fetch-data.js
+      run: node fetch-laws.js
