--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
     
     - name: Install dependencies
       working-directory: ./backend
-      run: npm ci
+      run: npm install
     
     - name: Set up environment variables
       working-directory: ./backend
