--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.43",
+    "expo": "^52.0.46",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
     "expo-notifications": "~0.29.14",
@@ -26,7 +27,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.4.0",
