changed both .env.example and gitignore

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ FIREBASE_MESSAGING_SENDER_ID="your-messaging-sender-id"
 FIREBASE_APP_ID="your-app-id"
 FIREBASE_MEASUREMENT_ID="your-measurement-id" 
 PORT="the port of the backend, standard is 3000"
+IP="your local private IP e.g.: 192.168.0.20"
