--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "expo": "^52.0.46",
-    "expo-constants": "~17.0.8",
-    "expo-device": "~7.0.3",
-    "expo-notifications": "~0.29.14",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.8",
+    "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-status-bar": "~2.2.3",
     "fast-xml-parser": "^5.2.0",
     "firebase": "^11.6.0",
     "nativewind": "^2.0.11",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.20.2",
-    "react-native-reanimated": "3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "4.4.0",
-    "react-native-web": "~0.19.13",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
